tests/paczka1/fuzzy1/38201812.err
Error in line 6: XHbS5w A970 83,8
Error in line 25: S706 A357 23,1
Error in line 24: SRUcAtsEM0 A357 29,2
Error in line 33: JFUhhaL A357 8,66
Error in line 29: SRUcAtsEM0 A332 22,8
Error in line 39: XHbS5w A332 12,1
